# CPP-UFGSG-Decomposition

./: README.md  environment.yml  install.sh  pyproject.toml
src/cpp/: decomposition.py  global_optimizer.py  parallel_track.py  picklestore.py  run.py
src/cpp/artifacts/: decompositions.pkl
src/cpp/utils/: helpers.py  viz.py
