[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpp-ufgsg-decomposition"
version = "0.1.0"
description = "Reference implementation for UFGSG coverage decomposition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "shapely>=2.0",
  "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cpp*"]
